syntax = "proto3";

package helloworld;

// The greeting service definition.
service GreeterService {
  // Sends a greeting by appending 'Hello ' prefix and "!!!" suffix to the name field of HelloRequest message
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}